# noir

./: Cargo.toml
src/: lib.rs
src/api/http/: request.rs
src/mock/: mod.rs  provider.rs
src/mock/http/: mod.rs
src/resource/http/: form.rs  request.rs  response.rs
src/util/: json.rs
