[package]
name = "noir"
version = "0.2.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
description="rust based, DSL alike and request driven, black box testing library for HTTP APIs."
documentation = "https://bonsaiden.github.io/noir/doc/noir"
repository = "https://github.com/BonsaiDen/noir.git"
readme = "README.md"
keywords = [ "testing", "http", "api", "mock", "dsl"]
license="MIT/Apache-2.0"

[dependencies]
url = "2.1"
rand = "0.7"
json = "0.12"
reqwest = { version = "0.10", features = ["blocking", "json", "rustls-tls"] }
colored = "2.0"
httparse = "1.3"
difference = "2.0"
lazy_static = "1.4"
human-panic = "1.0" 

[dev-dependencies]
pretty_assertions = "0.6"